--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,7 +4,10 @@
       <div class="jumbotron">
         <h2>Bienvenue sur tes statistiques Fortnite !</h2>
         <p>
-          <a class="btn btn-lg btn-primary" href="/home/profile" role="button">Ton profil »</a>
+          <a class="btn btn-lg btn-primary" href="/home/profile" role="button">Ton profil</a>
+        </p>
+        <p>
+          <a class="btn btn-lg btn-primary" href="/home/comparaison" role="button">Compare with your friend</a>
         </p>
       </div>
     <%- include footer %>
