--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,61 +1,89 @@
 <%- include header %>
-<div class="row">
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <h3 class="panel-title"><%=data[0].first_name%>, <%=data[0].last_name%>, Stats Solo Fortnite </h3>
-      </div>
-      <div class="panel-body">
-        <div class="column">
-          <div class=" col-md-5 col-lg-9 "> 
+  <link rel='stylesheet' href='' />
+
+  <div class="row">
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <%=data[0].first_name%>,
+              <%=data[0].last_name%>, Stats Solo Fortnite </h3>
+        </div>
+        <div class="panel-body">
+          <div class="column">
             <table class="table table-user-information">
               <tbody>
                 <tr>
                   <td>Top 1:</td>
-                  <td><%=dataGamer.stats.p2.top1.value%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.top1.value%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Top 10:</td>
-                  <td><%=dataGamer.stats.p2.top10.value%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.top10.value%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Top 25:</td>
-                  <td><%=dataGamer.stats.p2.top25.value%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.top25.value%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Matches:</td>
-                  <td><%=dataGamer.stats.p2.matches.value%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.matches.value%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Time Played:</td>
-                  <td><%=dataGamer.stats.p2.minutesPlayed.displayValue%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.minutesPlayed.displayValue%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Kills:</td>
-                  <td><%=dataGamer.stats.p2.kills.displayValue%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.kills.displayValue%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Kill per match:</td>
-                  <td><%=dataGamer.stats.p2.kpg.displayValue%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.kpg.displayValue%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Kill per minutes:</td>
-                  <td><%=dataGamer.stats.p2.kpm.displayValue%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.kpm.displayValue%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Kill/Death:</td>
-                  <td><%=dataGamer.stats.p2.kd.displayValue%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.kd.displayValue%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Score:</td>
-                  <td><%=dataGamer.stats.p2.score.displayValue%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.score.displayValue%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Score per match:</td>
-                  <td><%=dataGamer.stats.p2.scorePerMatch.displayValue%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.scorePerMatch.displayValue%>
+                  </td>
                 </tr>
                 <tr>
                   <td>Score per minutes:</td>
-                  <td><%=dataGamer.stats.p2.scorePerMin.displayValue%></td>
+                  <td>
+                    <%=dataGamer.stats.p2.scorePerMin.displayValue%>
+                  </td>
                 </tr>
 
 
@@ -65,135 +93,190 @@
           </div>
         </div>
       </div>
-      </div>
-      
+    </div>
+
+    <div class="col-md-4">
       <div class="panel panel-info">
         <div class="panel-heading">
-          <h3 class="panel-title"><%=data[0].first_name%>, <%=data[0].last_name%>, Stats Duo Fortnite </h3>
+          <h3 class="panel-title">
+            <%=data[0].first_name%>,
+              <%=data[0].last_name%>, Stats Duo Fortnite </h3>
         </div>
         <div class="panel-body">
           <div class="column">
-            <div class=" col-md-5 col-lg-9 "> 
-              <table class="table table-user-information">
-                <tbody>
-                  <tr>
-                    <td>Top 1:</td>
-                    <td><%=dataGamer.stats.p10.top1.value%></td>
-                  </tr>
-                  <tr>
-                    <td>Top 5:</td>
-                    <td><%=dataGamer.stats.p10.top5.value%></td>
-                  </tr>
-                  <tr>
-                    <td>Top 12:</td>
-                    <td><%=dataGamer.stats.p10.top12.value%></td>
-                  </tr>
-                  <tr>
-                    <td>Matches:</td>
-                    <td><%=dataGamer.stats.p10.matches.value%></td>
-                  </tr>
-                  <tr>
-                    <td>Time Played:</td>
-                    <td><%=dataGamer.stats.p10.minutesPlayed.displayValue%></td>
-                  </tr>
-                  <tr>
-                    <td>Kills:</td>
-                    <td><%=dataGamer.stats.p10.kills.displayValue%></td>
-                  </tr>
-                  <tr>
-                    <td>Kill per match:</td>
-                    <td><%=dataGamer.stats.p10.kpg.displayValue%></td>
-                  </tr>
-                  <tr>
-                    <td>Kill per minutes:</td>
-                    <td><%=dataGamer.stats.p10.kpm.displayValue%></td>
-                  </tr>
-                  <tr>
-                    <td>Kill/Death:</td>
-                    <td><%=dataGamer.stats.p10.kd.displayValue%></td>
-                  </tr>
-                  <tr>
-                    <td>Score:</td>
-                    <td><%=dataGamer.stats.p10.score.displayValue%></td>
-                  </tr>
-                  <tr>
-                    <td>Score per match:</td>
-                    <td><%=dataGamer.stats.p10.scorePerMatch.displayValue%></td>
-                  </tr>
-                  <tr>
-                    <td>Score per minutes:</td>
-                    <td><%=dataGamer.stats.p10.scorePerMin.displayValue%></td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+
+            <table class="table table-user-information">
+              <tbody>
+                <tr>
+                  <td>Top 1:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.top1.value%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Top 5:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.top5.value%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Top 12:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.top12.value%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Matches:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.matches.value%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Time Played:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.minutesPlayed.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Kills:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.kills.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Kill per match:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.kpg.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Kill per minutes:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.kpm.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Kill/Death:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.kd.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Score:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.score.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Score per match:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.scorePerMatch.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Score per minutes:</td>
+                  <td>
+                    <%=dataGamer.stats.p10.scorePerMin.displayValue%>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
+    </div>
 
-        <div class="panel panel-info">
-          <div class="panel-heading">
-            <h3 class="panel-title"><%=data[0].first_name%>, <%=data[0].last_name%>, Stats Section Fortnite </h3>
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h3 class="panel-title">
+            <%=data[0].first_name%>,
+              <%=data[0].last_name%>, Stats Section Fortnite </h3>
+        </div>
+        <div class="panel-body">
+          <div class="column">
+            <table class="table table-user-information">
+              <tbody>
+                <tr>
+                  <td>Top 1:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.top1.value%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Top 3:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.top3.value%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Top 6:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.top6.value%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Matches:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.matches.value%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Time Played:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.minutesPlayed.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Kills:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.kills.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Kill per match:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.kpg.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Kill per minutes:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.kpm.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Kill/Death:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.kd.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Score:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.score.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Score per match:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.scorePerMatch.displayValue%>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Score per minutes:</td>
+                  <td>
+                    <%=dataGamer.stats.p9.scorePerMin.displayValue%>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-          <div class="panel-body">
-            <div class="column">
-              <div class=" col-md-5 col-lg-9 "> 
-                <table class="table table-user-information">
-                  <tbody>
-                    <tr>
-                      <td>Top 1:</td>
-                      <td><%=dataGamer.stats.p9.top1.value%></td>
-                    </tr>
-                    <tr>
-                      <td>Top 3:</td>
-                      <td><%=dataGamer.stats.p9.top3.value%></td>
-                    </tr>
-                    <tr>
-                      <td>Top 6:</td>
-                      <td><%=dataGamer.stats.p9.top6.value%></td>
-                    </tr>
-                    <tr>
-                      <td>Matches:</td>
-                      <td><%=dataGamer.stats.p9.matches.value%></td>
-                    </tr>
-                    <tr>
-                      <td>Time Played:</td>
-                      <td><%=dataGamer.stats.p9.minutesPlayed.displayValue%></td>
-                    </tr>
-                    <tr>
-                      <td>Kills:</td>
-                      <td><%=dataGamer.stats.p9.kills.displayValue%></td>
-                    </tr>
-                    <tr>
-                      <td>Kill per match:</td>
-                      <td><%=dataGamer.stats.p9.kpg.displayValue%></td>
-                    </tr>
-                    <tr>
-                      <td>Kill per minutes:</td>
-                      <td><%=dataGamer.stats.p9.kpm.displayValue%></td>
-                    </tr>
-                    <tr>
-                      <td>Kill/Death:</td>
-                      <td><%=dataGamer.stats.p9.kd.displayValue%></td>
-                    </tr>
-                    <tr>
-                      <td>Score:</td>
-                      <td><%=dataGamer.stats.p9.score.displayValue%></td>
-                    </tr>
-                    <tr>
-                      <td>Score per match:</td>
-                      <td><%=dataGamer.stats.p9.scorePerMatch.displayValue%></td>
-                    </tr>
-                    <tr>
-                      <td>Score per minutes:</td>
-                      <td><%=dataGamer.stats.p9.scorePerMin.displayValue%></td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
+        </div>
+      </div>
+    </div>
 
-      
-    
- <%- include footer %>
+
+
+  </div>
+  <%- include footer %>
