--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -26,15 +26,15 @@
                                 </div>
                                     
                                 <div class="form-group">
-                                    <label for="first_name" class="col-md-3 control-label">First Name</label>
+                                    <label for="first_name" class="col-md-3 control-label">Gamertag</label>
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" name="first_name" placeholder="First Name">
+                                        <input type="text" class="form-control" name="first_name" placeholder="Gamertag">
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="last_name" class="col-md-3 control-label">Last Name</label>
+                                    <label for="last_name" class="col-md-3 control-label">Platform</label>
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" name="last_name" placeholder="Last Name">
+                                        <input type="text" class="form-control" name="last_name" placeholder="Platform">
                                     </div>
                                 </div>
                                                                                                 <div class="form-group">
