--- a/views/comparaison.ejs
+++ b/views/comparaison.ejs
@@ -1,16 +1,26 @@
 <%- include header %>
 
-<div class="row">
-    <div class="form-group">
-        <label for="gamertag" class="col-md-3 control-label">Your friend</label>
-        <div class="col-md-3">
-            <input type="text" class="form-control" name="gamertag" placeholder="Your friend">
+    <div class="row">
+        <div class="form-group">
+            <form class="form-horizontal" role="form" method="post" action="/home/comparaison/statCompare">
+                <label for="gamertag" class="col-md-3 control-label">Your friend</label>
+                <div class="col-md-3">
+                    <input type="text" class="form-control" name="gamertag" placeholder="Your friend">
+                </div>
+                <p>
+                    <button id="btn-statCompare" type="submit" class="btn btn-info">
+                        <i class="icon-hand-right"></i> OK !</button>
+                </p>
+                <div class="cc-selector">
+                    <input checked="checked" id="visa" type="radio" name="card" value="visa" />
+                    <label class="drinkcard-cc visa" for="visa"></label>
+                    <input id="mastercard" type="radio" name="card" value="mastercard" />
+                    <label class="drinkcard-cc mastercard" for="mastercard"></label>
+                </div>
+            </form>
         </div>
-        <p>
-            <a class="btn btn-lg btn-primary" href="/home/statCompare" role="button">Compare with your friend</a>
-        </p>
+
     </div>
-</div>
 
 
-<%- include footer %>
+    <%- include footer %>
