--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,13 +1,25 @@
 <html>
 
-   <%- include header %>
-      <div class="jumbotron">
-        <h2>Bienvenue sur tes statistiques Fortnite !</h2>
-        <p>
-          <a class="btn btn-lg btn-primary" href="/home/profile" role="button">Ton profil</a>
-        </p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="/home/comparaison" role="button">Compare with your friend</a>
-        </p>
-      </div>
-    <%- include footer %>
+<%- include header %>
+  <div class="jumbotron">
+    <h2>Bienvenue sur tes statistiques Fortnite !</h2>
+    <p>
+      <a class="btn btn-lg btn-primary" href="/home/profile" role="button">Ton profil</a>
+    </p>
+    <p>
+      <a class="btn btn-lg btn-primary" href="/home/comparaison" role="button">Compare with your friend</a>
+    </p>
+  </div>
+  <div class="btn-group">
+    <a class="btn btn-default" href="#">
+      <i class="fab fa-xbox" title="Align Left"></i>
+    </a>
+    <a class="btn btn-default" href="#">
+      <i class="fas fa-desktop" title="Align Center"></i>
+    </a>
+    <a class="btn btn-default" href="#">
+      <i class="fab fa-playstation" title="Align Right"></i>
+    </a>
+  </div>
+
+  <%- include footer %>
