--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,8 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <title>StatFortnite</title>
-     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+    <link rel='stylesheet' href='/static/style.css' />
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 </head>
 <body>
