--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,8 +6,7 @@
       <div class="panel panel-info">
         <div class="panel-heading">
           <h3 class="panel-title">
-            <%=data[0].first_name%>,
-              <%=data[0].last_name%>, Stats Solo Fortnite </h3>
+            <%=data[0].gamertag%>, Stats Solo Fortnite </h3>
         </div>
         <div class="panel-body">
           <div class="column">
@@ -99,8 +98,7 @@
       <div class="panel panel-info">
         <div class="panel-heading">
           <h3 class="panel-title">
-            <%=data[0].first_name%>,
-              <%=data[0].last_name%>, Stats Duo Fortnite </h3>
+            <%=data[0].gamertag%>, Stats Duo Fortnite </h3>
         </div>
         <div class="panel-body">
           <div class="column">
@@ -190,8 +188,7 @@
       <div class="panel panel-info">
         <div class="panel-heading">
           <h3 class="panel-title">
-            <%=data[0].first_name%>,
-              <%=data[0].last_name%>, Stats Section Fortnite </h3>
+            <%=data[0].gamertag%>, Stats Section Fortnite </h3>
         </div>
         <div class="panel-body">
           <div class="column">
