--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -32,33 +32,21 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="first_name" class="col-md-3 control-label">Gamertag</label>
+                                    <label for="gamertag" class="col-md-3 control-label">Gamertag</label>
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" name="first_name" placeholder="Gamertag">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="last_name" class="col-md-3 control-label">Platform</label>
-                                    <div class="col-md-9">
-                                        <input type="text" class="form-control" name="last_name" placeholder="Platform">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="mob_no" class="col-md-3 control-label">Mobile Number</label>
-                                    <div class="col-md-9">
-                                        <input type="number" class="form-control" name="mob_no" placeholder="Mobile Number">
+                                        <input type="text" class="form-control" name="gamertag" placeholder="Gamertag" required>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="user_name" class="col-md-3 control-label">User Name</label>
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" name="user_name" placeholder="User Name">
+                                        <input type="text" class="form-control" name="user_name" placeholder="User Name" required>
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     <label for="password" class="col-md-3 control-label">Password</label>
                                     <div class="col-md-9">
-                                        <input type="password" class="form-control" name="password" placeholder="Password">
+                                        <input type="password" class="form-control" name="password" placeholder="Password" required>
                                     </div>
                                 </div>
 
