--- a/views/statCompare.ejs
+++ b/views/statCompare.ejs
@@ -147,7 +147,7 @@
                                         <%=dataGamerFriend.stats.p2.kpm.displayValue%>
                                     </td>
                                 </tr>
-                                <tr  style="background-color : <%=dataGamerFriend.stats.p2.kd.value > dataGamer.stats.p2.kd.value ? '#d9c400' : ''%>">
+                                <tr  style="background-color : <%=dataGamerFriend.stats.p2.kd.value > dataGamer.stats.p2.kd.value ? '#d9c400' : 'F6F6F6'%>">
                                     <td>Kill/Death:</td>
                                     <td>
                                         <%=dataGamerFriend.stats.p2.kd.displayValue%>
